Index page setup
In this commit, the index page was setup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="css/grid.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <title>Interactive SVG icosn</title>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+    <h1 class="hidden">Logo</h1>
+    <section class="spacer">
+  
+        <div class="grid-con">
+          <div class="box col-span-1 m-col-span-3">Logo</div>
+          <div class="box col-span-3 m-col-span-9">Nav</div>
+        </div>
+        </section>
+</main>
+<script src="js/main.js"></script>
 </body>
 </html>
