--- a/index.html
+++ b/index.html
@@ -14,9 +14,28 @@
     <section class="spacer">
   
         <div class="grid-con">
-          <div class="box col-span-1 m-col-span-3">Logo</div>
-          <div class="box col-span-3 m-col-span-9">Nav</div>
+          <div class="text col-span-full">
+            <h1 class="top">ZIMA
+            </h1>
+          </div>
+
+
+          <div class="text col-span-full">
+            <p class="body-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere.
+            </p>
+          </div>
         </div>
+
+        <div class="grid-con">
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Apple</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Grapes</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Pineapple</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Orange</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Lemon</div>
+            <div class="box col-span-2 m-col-span-4 l-col-span-4">Coconut</div>
+            
+          </div>
         </section>
 </main>
 <script src="js/main.js"></script>
