Update Index page
Updated information of index page and inserted SVG images

--- a/index.html
+++ b/index.html
@@ -1,43 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/grid.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <title>Interactive SVG icosn</title>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <main>
-    <h1 class="hidden">Logo</h1>
-    <section class="spacer">
-  
+      <h1 class="hidden">Logo</h1>
+      <section class="spacer">
         <div class="grid-con">
           <div class="text col-span-full">
-            <h1 class="top">ZIMA
-            </h1>
+            <h1 class="top">ZIMA</h1>
           </div>
-
 
           <div class="text col-span-full">
             <p class="body-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis reiciendis blanditiis, provident minus quaerat harum voluptates laudantium sequi excepturi beatae? Atque neque laborum obcaecati dicta aspernatur est. A, facere.
+              In a world where every moment counts and energy is the currency of
+              achievement, Zima Energy emerges as your ultimate source of
+              vitality and flavor. With six electrifying flavors to choose from,
+              Zima Energy isn't just a drink; it's an explosion of taste and
+              energy that redefines the energy beverage experience. Imagine
+              cracking open a can of Zima, and being enveloped in a symphony of
+              flavors that dance on your palate. From the tangy burst of citrus
+              to the refreshing zing of berries, each sip is a journey of taste
+              sensations that invigorate your spirit and fuel your drive. But
+              Zima Energy isn't just about flavor; it's about power. Crafted
+              with precision by blending natural fruit extracts with
+              cutting-edge energy-enhancing ingredients, our formula delivers a
+              sustained boost of energy without the crash, keeping you at the
+              top of your game all day long. Whether you're a go-getter chasing
+              dreams, an athlete pushing boundaries, or a student burning the
+              midnight oil, Zima Energy has a flavor to match every moment of
+              your journey. So, why settle for ordinary when you can embrace
+              extraordinary? Grab a can of Zima Energy, and let each sip be a
+              celebration of flavor, vitality, and unstoppable passion!
             </p>
           </div>
         </div>
 
         <div class="grid-con">
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Apple</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Grapes</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Pineapple</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Orange</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Lemon</div>
-            <div class="box col-span-2 m-col-span-4 l-col-span-4">Coconut</div>
-            
-          </div>
-        </section>
-</main>
-<script src="js/main.js"></script>
-</body>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Apple</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Pineapple</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Watermelon</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Orange</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Lemon</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">Coconut</div>
+        </div>
+      </section>
+    </main>
+    <script src="js/main.js"></script>
+  </body>
 </html>
