--- a/index.html
+++ b/index.html
@@ -43,9 +43,24 @@
         </div>
 
         <div class="grid-con">
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Apple</div>
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Pineapple</div>
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Watermelon</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+            Apple
+            <object data="images/Apple_S.svg" type="image/svg+xml"></object>
+          </div>
+
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+            Pineapple
+            <object data="images/Pineapple_S.svg" type="image/svg+xml"></object>
+          </div>
+
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+            Watermelon
+            <object
+              data="images/Watermelon_S.svg"
+              type="image/svg+xml"
+            ></object>
+          </div>
+
           <div class="box col-span-2 m-col-span-4 l-col-span-4">Orange</div>
           <div class="box col-span-2 m-col-span-4 l-col-span-4">Lemon</div>
           <div class="box col-span-2 m-col-span-4 l-col-span-4">Coconut</div>
