--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         </div>
 
         <div class="grid-con">
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+          <div id="apple" class="box col-span-2 m-col-span-4 l-col-span-4">
             Apple
             <object data="images/Apple_S.svg" type="image/svg+xml"></object>
           </div>
 
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+          <div id="pinapple" class="box col-span-2 m-col-span-4 l-col-span-4">
             Pineapple
             <object data="images/Pineapple_S.svg" type="image/svg+xml"></object>
           </div>
 
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+          <div id="watermelon" class="box col-span-2 m-col-span-4 l-col-span-4">
             Watermelon
             <object
               data="images/Watermelon_S.svg"
