--- a/index.html
+++ b/index.html
@@ -80,9 +80,28 @@
             Watermelon
           </div>
 
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Orange</div>
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Lemon</div>
-          <div class="box col-span-2 m-col-span-4 l-col-span-4">Coconut</div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+
+            <object
+              data="images/orange.svg"
+              type="image/svg+xml"
+            ></object>
+            Orange
+          </div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+            <object
+              data="images/grapes.svg"
+              type="image/svg+xml">
+            </object>
+            Grapes
+          </div>
+          <div class="box col-span-2 m-col-span-4 l-col-span-4">
+            <object
+              data="images/lemon.svg"
+              type="image/svg+xml">
+            </object>
+          
+            Lemon</div>
         </div>
       </section>
     </main>
