--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
         <div class="grid-con">
           <div id="apple" class="box col-span-2 m-col-span-4 l-col-span-4">
-            <object data="images/Apple-1.svg" type="image/svg+xml"></object>
+            <object data="images/Apple_S.svg" type="image/svg+xml"></object>
             Apple
           </div>
 
           <div id="pinapple" class="box col-span-2 m-col-span-4 l-col-span-4">
-            <object data="images/Pineapple-1.svg" type="image/svg+xml"></object>
+            <object data="images/Pineapple_S.svg" type="image/svg+xml"></object>
             Pineapple
           </div>
 
@@ -73,27 +73,18 @@
           </div>
 
           <div class="box col-span-2 m-col-span-4 l-col-span-4">
-
-            <object
-              data="images/orange.svg"
-              type="image/svg+xml"
-            ></object>
+            <object data="images/orange.svg" type="image/svg+xml"></object>
             Orange
           </div>
           <div class="box col-span-2 m-col-span-4 l-col-span-4">
-            <object
-              data="images/grapes.svg"
-              type="image/svg+xml">
-            </object>
+            <object data="images/grapes.svg" type="image/svg+xml"></object>
             Grapes
           </div>
           <div class="box col-span-2 m-col-span-4 l-col-span-4">
-            <object
-              data="images/lemon.svg"
-              type="image/svg+xml">
-            </object>
-          
-            Lemon</div>
+            <object data="images/lemon.svg" type="image/svg+xml"></object>
+
+            Lemon
+          </div>
         </div>
       </section>
     </main>
